# KSjuzheng

./: .gitignore  .secrets.json.example  README.md  start_ks.bat  start_ks_all.ps1  stop_ks.bat  stop_ks_all.ps1  yk_oneshot.bat  下次测试_Frida抓KS184发布流程指南.md  生产流水线_完整升级计划.md  账号分佣归零问题分析与下次测试方案.md
backend/: .env.example  .gitignore  README.md  audit_all_get.py  audit_menu_pages.py  audit_named_pages.py  audit_pages.py  audit_settings.py  ecosystem.config.cjs  find_phone_user.py  inspect_login_hash.py  inspect_page_tables.py  inspect_settings_tables.py  login_users.py  pyproject.toml  requirements.txt  scan_more_tables.py  scan_tables.py  set_admin_password.py  start_dev.bat  test_login.py
backend/app/: __init__.py  main.py
backend/docs/: AI_README.md  KS184_REFERENCE_MAPPING.md  MODULE_SPEC.md  PERMISSIONS_CATALOG.md  PHASE2_PLAN.md
backend/scripts/: add_src_to_collections.py  create_mcn_accounts_view.py  create_test_operator.py  health_check.py  import_huoshijie.py  import_huoshijie.py.external_backup_20260426_071304  import_huoshijie_before_compat_full_20260426_062949.py  import_huoshijie_before_fluorescent_member_fields_20260426_064121.py  init_db.py  license_admin.py  patch_demo_compat.py  patch_demo_compat_v2.py  patch_demo_compat_v3.py  patch_demo_compat_v5.py  patch_demo_compat_v6.py  patch_demo_compat_v6b.py  patch_demo_compat_v6c.py  patch_demo_compat_v7.py  patch_demo_compat_v7b.py  patch_demo_compat_v7c.py  patch_demo_compat_v8.py  patch_demo_compat_v8b.py  patch_drama_merge.py  patch_members.py  permissions_data.py  refill_mcn_account_groups.py  (+3 more)
(+349 files in other folders)
