[project]
name = "ksjuzheng-backend"
version = "0.1.0"
description = "KS矩阵后端 — KS184 业务中台 (L0-L8) + AI 自动化扩展 (L9-L13)"
authors = [{name = "huanghua98558"}]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "PyJWT>=2.8",
    "bcrypt>=4.1",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "slowapi>=0.1.9",
    "loguru>=0.7",
    "cryptography>=42.0",
    "APScheduler>=3.10",
    "PyMySQL>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
]
postgres = [
    "psycopg[binary]>=3.1",
]
redis = [
    "redis>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "S"]
ignore = ["S101", "S104"]
